close #42
