# app/controllers/artists_controller.rb
@@ -1,5 +1,7 @@
+# frozen_string_literal: true
+
 class ArtistsController < ApplicationController
-  before_action :set_artist, only: %i[ show edit update destroy ]
+  before_action :set_artist, only: %i[show edit update destroy]
 
   # GET /artists or /artists.json
   def index
@@ -18,8 +20,7 @@ class ArtistsController < ApplicationController
   end
 
   # GET /artists/1/edit
-  def edit
-  end
+  def edit; end
 
   # POST /artists or /artists.json
   def create
@@ -27,7 +28,7 @@ class ArtistsController < ApplicationController
 
     respond_to do |format|
       if @artist.save
-        format.html { redirect_to artist_url(@artist), notice: "Artist was successfully created." }
+        format.html { redirect_to artist_url(@artist), notice: 'Artist was successfully created.' }
         format.json { render :show, status: :created, location: @artist }
       else
         format.html { render :new, status: :unprocessable_entity }
@@ -40,7 +41,7 @@ class ArtistsController < ApplicationController
   def update
     respond_to do |format|
       if @artist.update(artist_params)
-        format.html { redirect_to artist_url(@artist), notice: "Artist was successfully updated." }
+        format.html { redirect_to artist_url(@artist), notice: 'Artist was successfully updated.' }
         format.json { render :show, status: :ok, location: @artist }
       else
         format.html { render :edit, status: :unprocessable_entity }
@@ -54,19 +55,20 @@ class ArtistsController < ApplicationController
     @artist.destroy
 
     respond_to do |format|
-      format.html { redirect_to artists_url, notice: "Artist was successfully destroyed." }
+      format.html { redirect_to artists_url, notice: 'Artist was successfully destroyed.' }
       format.json { head :no_content }
     end
   end
 
   private
-    # Use callbacks to share common setup or constraints between actions.
-    def set_artist
-      @artist = Artist.find(params[:id])
-    end
 
-    # Only allow a list of trusted parameters through.
-    def artist_params
-      params.require(:artist).permit(:name, :bookmarks_count)
-    end
+  # Use callbacks to share common setup or constraints between actions.
+  def set_artist
+    @artist = Artist.find(params[:id])
+  end
+
+  # Only allow a list of trusted parameters through.
+  def artist_params
+    params.require(:artist).permit(:name, :bookmarks_count)
+  end
 end
