# doc/openapi.json
@@ -52,8 +52,8 @@
                   }
                 },
                 "example": {
-                  "id": 445,
-                  "name": "Bon Jovi"
+                  "id": 475,
+                  "name": "Janis Joplin and Big Brother and the Holding Company"
                 }
               }
             }
@@ -105,8 +105,8 @@
                   }
                 },
                 "example": {
-                  "id": 17,
-                  "title": "Midnight Memories"
+                  "id": 20,
+                  "title": "Gold: Greatest Hits"
                 }
               }
             }
@@ -158,7 +158,7 @@
                   }
                 },
                 "example": {
-                  "id": 17,
+                  "id": 20,
                   "name": "MyString"
                 }
               }
@@ -226,8 +226,95 @@
                   }
                 },
                 "example": {
-                  "id": 149,
-                  "title": "For What It's Worth",
+                  "id": 181,
+                  "title": "Bad Company",
+                  "user": null
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/musics/{id}": {
+      "patch": {
+        "summary": "update",
+        "tags": [
+          "Music"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "example": 171
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/x-www-form-urlencoded": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "music": {
+                    "type": "object",
+                    "properties": {
+                      "user": {
+                        "nullable": true
+                      },
+                      "band": {
+                        "nullable": true
+                      },
+                      "title": {
+                        "type": "string"
+                      },
+                      "bookmarks_count": {
+                        "type": "string"
+                      },
+                      "score": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              },
+              "example": {
+                "music": {
+                  "user": null,
+                  "band": null,
+                  "title": "Satisfaction",
+                  "bookmarks_count": "1",
+                  "score": "MyString"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "creates a new Music",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "integer"
+                    },
+                    "title": {
+                      "type": "string"
+                    },
+                    "user": {
+                      "nullable": true
+                    }
+                  }
+                },
+                "example": {
+                  "id": 182,
+                  "title": "Satisfaction",
                   "user": null
                 }
               }
